// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`securities.translator translateToSecurities multiple mixed securities 1`] = `
Array [
  Object {
    "description": "a description",
    "scheme": "basic",
    "type": "http",
  },
  Object {
    "description": "a description",
    "flows": Object {
      "implicit": Object {
        "authorizationUrl": "a url",
        "scopes": Array [],
      },
    },
    "type": "oauth2",
  },
  Object {
    "description": "a description",
    "in": "query",
    "name": "a name",
    "type": "apiKey",
  },
]
`;

exports[`securities.translator translateToSecurities single apiKey invalid security 1`] = `[Error: Provided security origin (the 'in' property): 'invalid' is not valid. Should be one of the following: query,header,cookie]`;

exports[`securities.translator translateToSecurities single apiKey security 1`] = `
Array [
  Object {
    "description": "a description",
    "in": "query",
    "name": "a name",
    "type": "apiKey",
  },
]
`;

exports[`securities.translator translateToSecurities single basic security 1`] = `
Array [
  Object {
    "description": "a description",
    "scheme": "basic",
    "type": "http",
  },
]
`;

exports[`securities.translator translateToSecurities single oauth2 security with accessCode flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {
      "authorizationCode": Object {
        "authorizationUrl": "an authorization url",
        "scopes": Array [
          Object {
            "scope": "value",
          },
        ],
        "tokenUrl": "a token url",
      },
    },
    "type": "oauth2",
  },
]
`;

exports[`securities.translator translateToSecurities single oauth2 security with application flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {
      "clientCredentials": Object {
        "scopes": Array [
          Object {
            "scope": "value",
          },
        ],
        "tokenUrl": "a token url",
      },
    },
    "type": "oauth2",
  },
]
`;

exports[`securities.translator translateToSecurities single oauth2 security with implicit flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {
      "implicit": Object {
        "authorizationUrl": "a url",
        "scopes": Array [],
      },
    },
    "type": "oauth2",
  },
]
`;

exports[`securities.translator translateToSecurities single oauth2 security with password flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {
      "password": Object {
        "scopes": Array [
          Object {
            "scope": "value",
          },
        ],
        "tokenUrl": "a token url",
      },
    },
    "type": "oauth2",
  },
]
`;

exports[`securities.translator translateToSecurities single oauth2 security with unknown flow 1`] = `
Array [
  Object {
    "description": "a description",
    "flows": Object {},
    "type": "oauth2",
  },
]
`;

exports[`securities.translator translateToSecurities single unknown security 1`] = `Array []`;
